EXP2/GP/LogExecGeral2.txt
  File "symbreg.py", line 113
    OB	pop = toolbox.population(NPOP)
         ^
SyntaxError: invalid syntax
symbreg.py:24: RuntimeWarning: divide by zero encountered in double_scalars
  return left / right
symbreg.py:24: RuntimeWarning: invalid value encountered in double_scalars
  return left / right
<string>:1: RuntimeWarning: invalid value encountered in double_scalars
/root/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:101: RuntimeWarning: invalid value encountered in subtract
  x = asanyarray(arr - arrmean)
>> Regressao Numerica com GP: 
>> 1000 amostras;tamanho max da arvore: 90
>> Inicio (Execucao 0)
Traceback (most recent call last):
  File "symbreg.py", line 238, in <module>
    MUTPB = MUTPB, 		NPOP = NPOP, 	train_percent = train_percent, 	verb = False,	FILE_NAME = filename)
  File "symbreg.py", line 138, in main
    fitnesses = list(map(toolbox.evaluate, offspring))
  File "symbreg.py", line 72, in evalSymbReg
    return math.fsum(sqerrors) / len(points),
KeyboardInterrupt
symbreg.py:24: RuntimeWarning: divide by zero encountered in double_scalars
  return left / right
symbreg.py:24: RuntimeWarning: invalid value encountered in double_scalars
  return left / right
<string>:1: RuntimeWarning: invalid value encountered in double_scalars
/root/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:101: RuntimeWarning: invalid value encountered in subtract
  x = asanyarray(arr - arrmean)
>> Regressao Numerica com GP: 
>> 1000 amostras;tamanho max da arvore: 90
>> Inicio (Execucao 0)
Traceback (most recent call last):
  File "symbreg.py", line 238, in <module>
    MUTPB = MUTPB, 		NPOP = NPOP, 	train_percent = train_percent, 	verb = False,	FILE_NAME = filename)
  File "symbreg.py", line 138, in main
    fitnesses = list(map(toolbox.evaluate, offspring))
  File "symbreg.py", line 70, in evalSymbReg
    sqerrors.append((F1 - f(x,y))**2)
  File "symbreg.py", line 55, in f
    return 2 - 2.1*math.sin(1.3*x)*math.cos(9.8*y)
KeyboardInterrupt
s_push: parser stack overflow
symbreg.py:24: RuntimeWarning: divide by zero encountered in double_scalars
  return left / right
symbreg.py:24: RuntimeWarning: invalid value encountered in double_scalars
  return left / right
<string>:1: RuntimeWarning: invalid value encountered in double_scalars
/root/anaconda3/lib/python3.6/site-packages/numpy/core/_methods.py:101: RuntimeWarning: invalid value encountered in subtract
  x = asanyarray(arr - arrmean)
<string>:1: RuntimeWarning: invalid value encountered in double_scalars
>> Regressao Numerica com GP: 
>> 1000 amostras;tamanho max da arvore: 90
>> Inicio (Execucao 0)
>> Fim da execucao (84.03721499443054 segundos)

>> Regressao Numerica com GP: 
>> 1000 amostras;tamanho max da arvore: 90
>> Inicio (Execucao 1)
Traceback (most recent call last):
  File "/root/anaconda3/lib/python3.6/site-packages/deap/gp.py", line 450, in compile
    return eval(code, pset.context, {})
MemoryError

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "symbreg.py", line 238, in <module>
    MUTPB = MUTPB, 		NPOP = NPOP, 	train_percent = train_percent, 	verb = False,	FILE_NAME = filename)
  File "symbreg.py", line 138, in main
    fitnesses = list(map(toolbox.evaluate, offspring))
  File "symbreg.py", line 59, in evalSymbReg
    f_approx = toolbox.compile(expr=individual)
  File "/root/anaconda3/lib/python3.6/site-packages/deap/gp.py", line 457, in compile
    "DEAP will now abort.").with_traceback(traceback)
  File "/root/anaconda3/lib/python3.6/site-packages/deap/gp.py", line 450, in compile
    return eval(code, pset.context, {})
MemoryError: DEAP : Error in tree evaluation : Python cannot evaluate a tree higher than 90. To avoid this problem, you should use bloat control on your operators. See the DEAP documentation for more information. DEAP will now abort.
